First working version of the mod

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,20 +1,20 @@
 {
-  "Group": "dev.hytalemodding",
-  "Name": "ExamplePlugin",
+  "Group": "com.marotodiego.hytale",
+  "Name": "HomeCrystal",
   "Version": "1.0.0",
-  "Description": "Description of your plugin",
+  "Description": "A simple mod that allows players to use a custom item to instantly teleport back home",
   "Authors": [
     {
-      "Name": "Your Name",
-      "Email": "your.email@example.com",
-      "Url": "https://your-website.com"
+      "Name": "Diego Maroto",
+      "Email": "diego@marotodiego.com",
+      "Url": "https://marotodiego.com"
     }
   ],
-  "Website": "https://your-plugin-website.com",
+  "Website": "https://marotodiego.com",
   "ServerVersion": "*",
   "Dependencies": {},
   "OptionalDependencies": {},
   "DisabledByDefault": false,
   "IncludesAssetPack": false,
-  "Main": "dev.hytalemodding.ExamplePlugin"
+  "Main": "com.marotodiego.hytale.homecrystal.HomeCrystalPlugin"
 }
